# subgraphs

./: .prettierignore  README.md  package-lock.json  package.json
.github/workflows/: actions.yml  build-checker.yaml  deployment.yml  test.yaml
deployment/: .eslintrc.json  README.md  class.js  deployment.js  deployment.json  deployment.ts  deploymentClass.js  deploymentClass.ts  deploymentConfigurations.json  deploymentTest.js  execution.js  execution.ts  package-lock.json  package.json  tsconfig.json
deployment/validation/: validateDeploymentJson.ts
messari-cli/: package-lock.json  package.json
messari-cli/src/: cli.ts
src/: deployment.py  test.py
subgraphs/: .eslintignore
subgraphs/aave-governance/: package.json
subgraphs/aave-v2-forks/: package.json
subgraphs/aave-v3/: package.json  subgraph.yaml
subgraphs/abracadabra/: package.json
subgraphs/apeswap/: subgraph.yaml
subgraphs/arrakis-finance/: package.json
subgraphs/aura/: subgraph.yaml
subgraphs/badgerdao/: package.json
subgraphs/balancer-forks/: package.json
subgraphs/bancor-v3/: package.json
subgraphs/beefy-finance/: package.json
subgraphs/belt-finance/: package.json
subgraphs/benqi/: networks.json  package.json  schema.graphql  subgraph.yaml
subgraphs/compound-forks/: package.json
subgraphs/convex-finance/: package.json
subgraphs/cronos-dummy/: package.json
subgraphs/curve-finance/: package.json
substreams/uniswap-forks/: Cargo.toml  substreams.yaml
substreams/uniswap-forks/proto/: events  pool.proto
substreams/uniswap-forks/src/: lib.rs
(+159 files in other folders)
